--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,7 @@
   line-height: 24px;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #fdeed9;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
