--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   line-height: 24px;
   font-weight: 400;
 
-  background-color: #fdeed9;
+  background-color: #f2f5f7;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
