--- a/src/source.css
+++ b/src/source.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.header {
+	box-shadow: 0 2px 10px 0 rgba(0,0,0, 0.1);
+	background-color: #fff;
+}
